# maze

./: .gitignore  CMakeLists.txt  Doxyfile  maze.cppcheck
app/inc/: define.h  maze.h  memory.h  misc.h
app/src/: main.c  maze.c  memory.c  misc.c
